// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  display: inline-block;
}

.c2 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.5rem;
  background-color: hsla(0,100%,100%,1);
  border-radius: 0.5rem;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
}

.c3:hover {
  background-color: hsla(213,27%,84%,0.5);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c5 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(213,27%,84%,1);
}

.c1 {
  cursor: pointer;
}

<body>
    <div>
      <div
        class="c0"
        data-tui-name="MenuTrigger"
      >
        <div
          class="c1"
        >
          <div
            data-testid="menu-btn"
          >
            Menu
          </div>
        </div>
        <menu
          class="c2"
          data-tui-name="Menu"
          role="menu"
        >
          <li
            class="c3"
            data-tui-name="MenuItem"
            role="menuitem"
          >
            <i
              class="c4"
            >
              <i>
                icon
              </i>
            </i>
            Home
          </li>
          <hr
            class="c5"
            data-tui-name="MenuItemSeparator"
          />
          <li
            class="c3"
            data-tui-name="MenuItem"
            role="menuitem"
          >
            Logout
          </li>
        </menu>
      </div>
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  display: inline-block;
}

.c2 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.5rem;
  background-color: hsla(0,100%,100%,1);
  border-radius: 0.5rem;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
}

.c3:hover {
  background-color: hsla(213,27%,84%,0.5);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c5 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(213,27%,84%,1);
}

.c1 {
  cursor: pointer;
}

<div>
    <div
      class="c0"
      data-tui-name="MenuTrigger"
    >
      <div
        class="c1"
      >
        <div
          data-testid="menu-btn"
        >
          Menu
        </div>
      </div>
      <menu
        class="c2"
        data-tui-name="Menu"
        role="menu"
      >
        <li
          class="c3"
          data-tui-name="MenuItem"
          role="menuitem"
        >
          <i
            class="c4"
          >
            <i>
              icon
            </i>
          </i>
          Home
        </li>
        <hr
          class="c5"
          data-tui-name="MenuItemSeparator"
        />
        <li
          class="c3"
          data-tui-name="MenuItem"
          role="menuitem"
        >
          Logout
        </li>
      </menu>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Menu Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  position: relative;
  display: inline-block;
}

.c2 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.5rem;
  background-color: hsla(214,13%,20%,1);
  border-radius: 0.5rem;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
}

.c3:hover {
  background-color: hsla(215,25%,27%,0.5);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c5 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(215,25%,27%,1);
}

.c1 {
  cursor: pointer;
}

<body>
    <div>
      <div
        class="c0"
        data-tui-name="MenuTrigger"
      >
        <div
          class="c1"
        >
          <div
            data-testid="menu-btn"
          >
            Menu
          </div>
        </div>
        <menu
          class="c2"
          data-tui-name="Menu"
          role="menu"
        >
          <li
            class="c3"
            data-tui-name="MenuItem"
            role="menuitem"
          >
            <i
              class="c4"
            >
              <i>
                icon
              </i>
            </i>
            Home
          </li>
          <hr
            class="c5"
            data-tui-name="MenuItemSeparator"
          />
          <li
            class="c3"
            data-tui-name="MenuItem"
            role="menuitem"
          >
            Logout
          </li>
        </menu>
      </div>
    </div>
  </body>,
  "container": .c0 {
  position: relative;
  display: inline-block;
}

.c2 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0.5rem;
  background-color: hsla(214,13%,20%,1);
  border-radius: 0.5rem;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
}

.c3:hover {
  background-color: hsla(215,25%,27%,0.5);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c5 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(215,25%,27%,1);
}

.c1 {
  cursor: pointer;
}

<div>
    <div
      class="c0"
      data-tui-name="MenuTrigger"
    >
      <div
        class="c1"
      >
        <div
          data-testid="menu-btn"
        >
          Menu
        </div>
      </div>
      <menu
        class="c2"
        data-tui-name="Menu"
        role="menu"
      >
        <li
          class="c3"
          data-tui-name="MenuItem"
          role="menuitem"
        >
          <i
            class="c4"
          >
            <i>
              icon
            </i>
          </i>
          Home
        </li>
        <hr
          class="c5"
          data-tui-name="MenuItemSeparator"
        />
        <li
          class="c3"
          data-tui-name="MenuItem"
          role="menuitem"
        >
          Logout
        </li>
      </menu>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
